Add input validator and processor

--- a/src/components/ReactTabContentView.css
+++ b/src/components/ReactTabContentView.css
@@ -1,19 +1,19 @@
-.App {
+.react-tab-content-view {
   text-align: center;
 }
 
-.App-logo {
+.react-tab-content-view-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .react-tab-content-view-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.react-tab-content-view-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,7 +24,7 @@
   color: white;
 }
 
-.App-link {
+.react-tab-content-view-link {
   color: #61dafb;
 }
 
